# pendsim

./: .gitignore  GP.pgf  LICENSE  Linearization.html  Linearization.ipynb  PID.html  PID.ipynb  PlottingTutorial.html  PlottingTutorial.ipynb  README.md  StateEstimation.html  StateEstimation.ipynb  SwingUp.html  SwingUp.ipynb  customctl.html  customctl.ipynb  example.py  example2.py  example3.py  genindex.html  index.html  install.html  objects.inv  paper.bib  paper.md  pendulum.py  py-modindex.html  readme.md  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tutorial.html  tutorial.ipynb  ukf.py
.github/workflows/: main.yml
_modules/: index.html
_modules/pendsim/: controller.html  sim.html  utils.html  viz.html
_sources/: tutorial.ipynb.txt
autoapi/: index.html
docs/: Linearization.nblink  Makefile  PID.nblink  PlottingTutorial.nblink  StateEstimation.nblink  SwingUp.nblink  conf.py  customctl.nblink  index.html  index.rst  install.rst  pendulum.html
examples/: readme.md  unscented_kalman.py
notebooks/: LQR.ipynb  MAE106_PD_controller_design.ipynb  MAE106_linearization.ipynb  PD_workshop.ipynb  PID.ipynb  linearization.ipynb  lqr_gpr.ipynb  lqr_state_estimation.ipynb  nocontroller.ipynb  state_estimation.ipynb  swingup.ipynb  tutorial_pid.ipynb  tutorial_plot_inline.ipynb
pendsim/: __init__.py  controller.py  sim.py  test_controller.py  utils.py  viz.py
pendulum/: controller.py  controller2.py  example.py  gp_examples.py  long_open_loop.py  lqr_gpr.py  lqr_gpr2.py  pendulum.py  run.ipynb  run.py  sim.py  utils.py  viz.py
(+38 files in other folders)
