[metadata]
name = pendsim
version = 1.0.4
author = Mike Sutherland
author_email = msutherl@uci.edu
description = A pendulum simulator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rland93/pendsim
project_urls =
    Bug Tracker = https://github.com/rland93/pendsim/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = ./
packages = find:
python_requires = >=3.6.0
install_requires = 
    matplotlib>=3.5
    scipy>=1.7
    filterpy>=1.4
    pandas>=1.3
    tqdm>=4.0
    pytest>=7.0
    notebook>=6.0

[options.packages.find]
where = ./